# manycore_svg

./: .gitignore  Cargo.toml  README.md
src/: clip_path.rs  connections_group.rs  defs.rs  error.rs  events_rect.rs  exporting_aid.rs  information_group.rs  information_layer.rs  lib.rs  marker.rs  offsets.rs  partial_update.rs  processing_group.rs  render_settings.rs  sinks_sources_layer.rs  style.rs  svg_conversions.rs  tasks_group.rs  text_background.rs  view_box.rs
src/assets/: roboto_mono_base64.txt
src/information_layer/: channel_data.rs  coordinates.rs  text_information.rs  utils.rs
src/render_settings/: configurable_base_configuration.rs  field_configuration.rs
tests/: VisualiserOutput1.xml  conf2.json  conf3.json  conf4.json  conf6.json  conf7.json  conf8.json  conf_test.json  information_update.xml  sinks_sources_update.xml  style_update.css  style_update.xml  tasks_update.xml  view_box_update.txt
