[package]
name = "manycore_svg"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.1.2" }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = "1.0.196"
