[package]
name = "manycore_svg"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.32"
getset = "0.1.2"
manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.4.5" }
manycore_utils = { git = "https://github.com/joe2k01/manycore_utils.git", version = "0.1.0" }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = "1.0.196"
serde_json = "1.0.113"

[dev-dependencies]
lazy_static = "1.4.0"
